# adhd-time-tracker

./: .gitignore  README.md  package.json  setup-and-run.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
