[package]
name = "tauri-widget"
version = "1.0.0"
description = "Windows always-on-top widget built with Tauri"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-start-dragging", "window-hide", "window-unmaximize", "window-unminimize", "window-minimize", "window-close", "window-show", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
